# indicator-datetime

./: .bzrignore  .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Jenkinsfile  MERGE-REVIEW  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac
cmake/: Translations.cmake
data/: CMakeLists.txt  Makefile.am  Makefile.in  com.canonical.indicator.datetime  com.canonical.indicator.datetime.AlarmProperties.xml  com.canonical.indicator.datetime.gschema.xml  com.canonical.indicator.datetime.gschema.xml.in  com.canonical.indicator.datetime.gschema.xml.in.in  datetime-dialog.ui  gnome-indicator-datetime-panel.desktop.in  indicator-datetime-preferences.desktop  indicator-datetime-preferences.desktop.in  indicator-datetime.conf.in  indicator-datetime.desktop.in  indicator-datetime.service.in  org.ayatana.indicator.datetime.gschema  org.ayatana.indicator.datetime.gschema.xml  unity-datetime-panel.desktop.in
debian/: changelog  control  copyright  gnome-control-center-datetime.install  indicator-datetime.install  indicator-datetime.links  indicator-datetime.maintscript  locale-gen  rules  unity-control-center-datetime.install
debian/patches/: disable_Werror.patch  fix-timezones.patch  gtk_box_api.patch  lp_750671.patch  lp_762976.patch  lp_802384.patch  lp_844741.patch  port-eds-3.5.patch  series
include/: CMakeLists.txt
include/core/: connection.h
include/datetime/: actions-live.h  actions.h  alarm-queue-simple.h  alarm-queue.h  appointment.h  clock-mock.h  clock-watcher.h  clock.h  date-time.h  dbus-shared.h  engine-eds.h  engine-mock.h  engine.h  exporter.h  formatter.h  locations-settings.h  locations.h  menu.h  myself.h  planner-aggregate.h  planner-eds.h  planner-mock.h  planner-range.h  planner-snooze.h  planner.h  service.h  settings-live.h  settings-shared.h  settings.h  snap.h  state-live.h  state.h  timezone-file.h  timezone-geoclue.h  timezone-timedated.h  timezone.h  timezones-live.h  timezones.h  utils.h  wakeup-timer-mainloop.h  (+3 more)
include/notifications/: awake.h  dbus-shared.h  haptic.h  notifications.h  sound.h
libmap/: Makefile.am  Makefile.in  README  cc-timezone-map.c  cc-timezone-map.h
panel/: CMakeLists.txt  datetime-prefs-locations.c  datetime-prefs.c
panel-gnome/: CMakeLists.txt
panel-unity/: CMakeLists.txt
po/: CMakeLists.txt  POTFILES.in  ar.po  be.po  bg.po  bn_BD.po  ca.po  cs.po  da.po  de.po  el.po  es.po  fi.po  fr.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  indicator-datetime.pot  it.po  ja.po  ko.po  lt.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sc.po  si.po  sk.po  sl.po  sr.po  sv.po  th.po  tr.po  (+3 more)
src/: CMakeLists.txt  Makefile.am  Makefile.in  actions-live.cpp  actions.cpp  alarm-queue-simple.cpp  alarm-queue.cpp  appointment.cpp  awake.cpp  clock-live.c  clock-live.cpp  clock-live.h  clock-watcher.cpp  clock.c  clock.cpp  clock.h  com.ubuntu.touch.AccountsService.Sound.xml  date-time.cpp  datetime-interface.c  datetime-interface.h  datetime-prefs-locations.c  datetime-prefs-locations.h  datetime-prefs.c  datetime-service-client.h  datetime-service-server.h  datetime-service.c  datetime-service.xml  dbus-shared.h  engine-eds.cpp  exporter.cpp  formatter-desktop.cpp  formatter.cpp  gen-datetime-service.xml.c  gen-datetime-service.xml.h  haptic.cpp  indicator-datetime.c  location-file.c  location-file.h  location-geoclue.c  location-geoclue.h  (+46 more)
tests/: CMakeLists.txt  Makefile.am  Makefile.am.strings  Makefile.in  accounts.db  actions-mock.h  geoclue-fixture.h  glib-fixture.h  libdbusmock-fixture.h  manual  manual-test-snap.cpp  notification-fixture.h  planner-mock.c  planner-mock.h  print-to.h  run-eds-ics-test.sh  run-eds-test.sh  state-fixture.h  state-mock.h  test-actions.cc  test-actions.cpp  test-alarm-queue.cpp  test-clock-watcher.cpp  test-clock.cc  test-clock.cpp  test-core.cc  test-datetime.cpp  test-dbus-fixture.h  test-eds-ics-all-day-events.cpp  test-eds-ics-all-day-events.ics.in  test-eds-ics-missing-trigger.cpp  test-eds-ics-missing-trigger.ics  test-eds-ics-missing-trigger.ics.in  test-eds-ics-non-attending-alarms.cpp  test-eds-ics-non-attending-alarms.ics.in  test-eds-ics-non-selected-source.cpp  test-eds-ics-nonrepeating-events.cpp  test-eds-ics-nonrepeating-events.ics  test-eds-ics-nonrepeating-events.ics.in  test-eds-ics-repeating-events-with-indival-change.ics.in  (+46 more)
tests/test-eds-tasks-config-files/.local/share/evolution/tasks/system/: tasks.ics
